test_programs/compile_failure/noirc_frontend_tests_imports_errors_if_using_alias_in_import/src/main.nr

    mod foo {
        pub type bar = i32;
    }

    use foo::bar::baz;

    fn main() {
    }
    